refined project 9 description for clarity and detail

--- a/index.html
+++ b/index.html
@@ -1314,18 +1314,12 @@
             <div class="collapse" id='collapse_prj7'>
               <p>
                 <br>
-                  Scientific background
-
+                  Scientific background:
                   Facial attractiveness is influenced by biological, cultural and individual factors, and may relate to personality traits inferred from facial features. A recent method avoids explicit ratings and instead reconstructs each person’s aesthetic preferences by letting them navigate a low-dimensional face space. This makes it possible to explore questions such as: how much identity information is embedded in someone’s preferred faces? How do geometry and texture interact? How do gender, identity or personality traits shape preferences?
-
-                  Project description
-
+                  Project description:
                   The project develops a behavioural experimental framework to study facial aesthetics and perception. It relies on an evolutionary algorithm in which subjects repeatedly choose their preferred image between pairs, and successive generations of synthetic faces adapt to their aesthetic criteria, encoding memory of past choices.
-
                   The goal is to extend this framework to include texture variation, enabling navigation of a richer face space. This requires integrating two existing codebases so that each individual in the genetic population carries both geometric and texture components.
-
-                  Objective
-
+                  Objective:
                   To build software that allows users to explore the space of human faces through binary choices, with full control over geometry and texture. Representing faces through principal components should keep this extended space efficient and manageable to navigate.                <br>
                 <br>  
               </p>
