--- a/index.html
+++ b/index.html
@@ -1344,6 +1344,61 @@
 
         <hr> <!-- Project Item LEFT -->
 
+          <!--Project 10-->
+          <div class="row gy-4 align-items-center projects-item">
+          <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/26" target="_blank">Focus tracking interface with EEG device</a></h3>
+            <p>
+              By <b>Maggie Bowen and Sojoud Jebril</b>
+            </p>
+            <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj8">Description</a>
+
+            <div class="collapse" id='collapse_prj8'>
+              <p>
+                <br>
+                <ul>
+                  <li>
+                      What are you doing, for whom, and why?
+                      Making a system to help students like us focus utilizing a commercial EEG. With our system we hope to demonstrate the possibilities of EEG-based focus apps.
+                  </li>
+                  <li>
+                      What makes your project special and exciting?
+                      While there are other products like Muse which track focus they don’t have an interface that actually helps train focus and their system is quite costly. Ours will make use of an open source software and more cost effective device.                  </li>
+                  <li>
+                      How to get started?
+                      First we’ll stream and build a classifier to understand when a user is in the alpha frequency band. Then, we’ll develop an interface to help guide them when they aren’t based on previous literature regarding meditative states and alpha.                  </li>
+                  <li>
+                      Where to find key resources?
+                      NeuroPawn and OpenCortexBCI documentation
+                  </li>
+                  </ul>
+                <br>
+                <br>
+              </p>
+                <b>Goals for the BrainHack:</b>
+                <br>
+                <br>
+                    A fully functioning real-time interface for focus management and improvement.
+
+                <br>
+                <b>Contributors' skills:</b>
+                <br>
+                <ul>
+                  <li>Interface design</li>
+                  <li>Frontend/backend</li>
+                  <li>Data Science</li>
+                </ul>
+              </p>
+            </div>
+
+          </div>
+          <div class="col-lg-5 d-flex align-items-center projects-img-bg" data-aos="zoom-out">
+            <img src="images/projects/project_generic.png" class="img-fluid" alt="">
+          </div>
+        </div> 
+
+        <hr>  <!-- Project Item RIGHT -->
+
 
       </div>
 
